Further styling of grid, fixed safari spacing bug

--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -8,22 +8,21 @@
     padding-left: 30px;
     padding-right: 30px;
     box-sizing: border-box;
-    overflow: visible;
-    //background: $red;
+    overflow: hidden;
 }
 
 .projects-list {
     column-count: 3;
-    column-gap: 2em;
+    column-gap: 30px;
     margin: 0;
+    margin-top: -30px;
     padding: 0;
     .project {
         width: 100%;
-        margin: 0 0 2em;
+        margin: 30px 0 0;
         display: inline-block;
-        box-shadow: 0 10px 50px -10px rgba(0, 0, 0, 0.2);
         border-radius: 15px;
-        background: $white;
+        background: rgb(250, 250, 250);//$white;
         &__img {
             width: 100%;
             padding-top: 60%;
@@ -64,6 +63,7 @@
        &__categ {
            padding: 0;
            margin-left: 30px;
+           padding-right: 30px;
            margin-bottom: 15px;
            &__item {
                display: inline-block;
@@ -83,5 +83,64 @@
                }
            }
        }
+    }
+}
+
+@media(max-width: 1100px) {
+    .projects-list {
+        column-count: 2;
+    }
+}
+
+@media(max-width: 700px) {
+    .projects-list {
+        .project {
+            &__title {
+                margin-left: 20px;
+                margin-bottom: 7px;
+                padding-right: 20px;
+                font-size: 24px;
+                line-height: 28px;
+            }
+            &__desc {
+                margin-left: 20px;
+                margin-bottom: 15px;
+                padding-right: 20px;
+                font-size: 18px;
+                line-height: 24px;
+            }
+            &__categ {
+                margin-left: 20px;
+                padding-right: 20px;
+                &__item {
+                    font-size: 14px;
+                    line-height: 18px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .projects {
+        padding: 0 20px;
+    }
+    .projects-list {
+        column-count: 1;
+    }
+}
+
+@media (max-width: 420px) {
+    .projects {
+        padding: 0;
+    }
+    .projects-list {
+        .project {
+            background-color: $white;
+            border-radius: 0px;
+            &__img {
+                border-radius: 0px;
+            }
+        }
     }
 }
